# HomeControl-ESP32-2432S028

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  display.c  display.h  ha_client.c  ha_client.h  idf_component.yml  main.c  mqtt_manager.c  mqtt_manager.h  settings.c  settings.h  ui.c  ui.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
